# work

./: .gitignore  LICENSE  python 3.7库(Conda).txt  python 3.9(conda).txt  py库240906.txt  test.py  test1.py
Meteorological/: .gitignore  ERA5_API.py  pyproject.toml  pytorch_test.py  test.ipynb
Meteorological/ClimatePy/: Cquiver.py  corr_reg.py
Meteorological/LBM/: force_file.py  frc_draw.py  g2w.npy  spg2w.f  w2g.f
Meteorological/PyNCL/: test1.py  vector_wrap.py
Meteorological/climkit/: Cquiver.py  K_Mean.py  corr_reg.py  lead_lag_corr.py  masked.py  temperature_budget.py  wavelet.py
Meteorological/p2/: 6-8月空间分布.ipynb  DATA_ADDRESS.py  EHD夏季发展图.ipynb  [-1]温度收支.ipynb  [-1]阈值敏感性.ipynb  frc_plot_合并试验.py  分型评分.py  分布型功率谱分析.ipynb  前期海温相关场.ipynb  前期海温相关场.py  前期海温相关场数据计算.ipynb  功率谱分析.ipynb  加热率收支.ipynb  各因子回归场.ipynb  各空间型环流异常.ipynb  各空间型环流异常.py  各空间型环流异常[废].ipynb  各空间型的异常要素场.ipynb  各空间型的异常要素场.py  因子间相关性.ipynb  均温和日数相关性.py  温度收支.ipynb  温度收支.py  示意图.py  赤道地区降水纬向环流回归归因.py  赤道纬向环流.ipynb  赤道纬向环流.py  超前滞后海温相关.py  辐射收支.ipynb  阈值敏感性.ipynb  阈值敏感性.py
Meteorological/p3/: DATA_ADDRESS.py  PE-model自动滚动预测.py  type1后期发展.py  type1预测因子.py  type2后期发展.py  type2预测因子.py  type3后期发展.py  type3预测因子.py  不同类型WEHT新定义.py  前期场发展.py  功率谱分析.py  逐日WEHT的三类投影指数.py
Meteorological/p4/: 2015-678月异常.py  2015海温合成.py  5-9月异常.py  cds_accounts.json  pre逐日数据.py  single_lev_逐日数据合并.py  t2m_nina_index.py  t2m_逐日数据合并.py  t2m逐日数据.py  t2m逐日数据CN05.py  t2m逐日数据ERA5.py  tcc逐日数据.py  uvwztq_逐日数据合并.py  临时-2015投影历史SVD.py  临时-90天滤波发展场-动图.py  临时-90天滤波发展场.py  临时-90天滤波后3日云量降水场.py  临时-90天滤波后3日环流场.py  临时-PCI位相指数.py  临时-SVD分解.py  (+37 more)
(+474 files in other folders)
