[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClimatePy"          # 避免与 PyPI 上潜在重名冲突
version = "0.1.0beta"
description = "Some tool function package for Climate project"
requires-python = ">=3.9"
license = "BSD 3-Clause"
authors = [{ name = "Tingyang Song", email = "1057422494@qq.com" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "xarray>=2024.1",
  "netCDF4>=1.6",
  "cftime>=1.6",
  "bottleneck>=1.3",
  "matplotlib>=3.8",
  "metpy>=1.6",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "joblib>=1.3",
  "cartopy>=0.22",
  "shapely>=1.0",
  "pyproj>=3.6",
  "xgrads>=0.2.0",
  "cmaps>=1.5",
  "func_timeout>=1.0",
  "numba>=0.53",
  "salem>=0.2",
  "eofs>=1.0",
  "geopandas>=0.10",
  "pymannkendall>=1.0",
  "statsmodels>=0.9",
  "pycwt>=0.10",
]

[tool.setuptools]
packages = ["ClimatePy"]           # 或者使用 find 命令： [tool.setuptools.packages.find]